# DuckCLI

./: .coveragerc  .gitignore  README.md  manage.py  mypy.ini  pyproject.toml  release-notes.md  requirements-dev.txt  requirements.txt  server.py
DuckCLI/: settings.py  urls.py  wsgi.py
automationtasks/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
autoplanning/: apps.py
changecontrol/: apps.py
home/: apps.py  views.py
integration/: apps.py
inventory/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
src/duckcli/backend/UI/: login.py  main.py
src/duckcli/backend/UI/static/: inventory_styles.css
src/duckcli/backend/UI/templates/: inventory.html  inventory_all.html  item.html  login.html
src/duckcli/backend/app/inventory/: inventory.py  main.py  models.py  schemas.py
src/duckcli/backend/app/settings/: settings.py
src/duckcli/frontend/: main.py  runserver.py
src/duckcli/frontend/settings/: settings.py
src/duckcli/frontend/utils/: aio_http_driver.py  auth.py  main.py
templates/: automation.html  autotask_detail.html  base.html  home.html  inventory.html  inventory_detail.html  inventory_form.html  task_form.html
templates/account/: login.html  logout.html  signup.html
tests/: openapi.json  test_backend_api_endpoints.py  test_backend_app_inventory_main.py  test_backend_app_network_read_main.py  test_backend_app_network_read_read.py  test_backend_app_network_read_schemas.py  test_backend_core_auth_jwttoken.py  test_backend_core_auth_main.py  test_backend_core_auth_schemas.py  test_backend_core_driver_netconf.py  test_backend_core_driver_ssh.py  test_backend_core_utils_cmd_acl.py  test_frontend_app_ping_main.py  test_frontend_app_ping_view.py
(+30 files in other folders)
